--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,6 @@
     <meta name="author" content="">
     <title>File Servert</title>
 </head>
-<h1>Hello, I am RESTful APU Server.</h1>
+<h1>Hello, I am RESTful API Server main.</h1>
 
 </html>
